--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -7,31 +7,11 @@
     <title>Vite + React + TS</title>
   </head>
   <body>
-   
+    <!-- Google Translate CDN Script -->
 
-    <div id="google_translate_element" style="display: none;"></div>
-    <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
-    <!-- Google Translate Element -->
-<div id="google_translate_element"></div>
+    <!-- <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script> -->
 
-<script type="text/javascript">
-  function googleTranslateElementInit() {
-    new google.translate.TranslateElement(
-      {
-        pageLanguage: 'en',
-        includedLanguages: 'en,te', // Add more like hi, ta, kn if needed
-        layout: google.translate.TranslateElement.InlineLayout.SIMPLE
-      },
-      'google_translate_element'
-    );
-  }
-</script>
-
-<script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
-
-     <div id="root"></div>
+    <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
-    
-
   </body>
 </html>
